--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <!-- FORMULAIRE -->
   <section id="formulaire" class="form-section">
     <div class="container">
-      <h2>Demande d’étude gratuite</h2>
+      <h2>Obtenez votre étude gratuite</h2>
       <form action="https://formspree.io/f/your-id" method="POST">
         
         <label for="structure">Type de structure</label>
@@ -57,13 +57,11 @@
         <label for="localisation">Localisation du projet</label>
         <input type="text" id="localisation" name="localisation" placeholder="Ville / Code postal" required>
 
-        <!-- Slider Puissance -->
         <label for="puissance">Puissance souhaitée (kWc)</label>
-<div class="slider-container">
-  <input type="range" id="puissance" name="puissance" min="10" max="500" step="10" value="50">
-  <div id="bubble">50 kWc</div>
-</div>
-
+        <div class="slider-container">
+          <input type="range" id="puissance" name="puissance" min="10" max="500" step="10" value="50">
+          <div id="bubble">50 kWc</div>
+        </div>
 
         <label for="message">Précisions complémentaires</label>
         <textarea id="message" name="message" rows="4" placeholder="Expliquez votre projet..."></textarea>
@@ -73,6 +71,11 @@
 
         <label for="tel">Téléphone</label>
         <input type="tel" id="tel" name="tel" required>
+
+        <!-- reCAPTCHA (à activer si besoin) -->
+        <div class="captcha">
+          <p>[CAPTCHA]</p>
+        </div>
 
         <button type="submit" class="cta">🚀 Envoyer ma demande</button>
       </form>
@@ -93,14 +96,16 @@
 
       <div class="footer-col">
         <h3>Nos certifications</h3>
-        <div class="certifications-top">
-          <img src="logo-rge.png" alt="RGE">
-          <img src="logo-qualipv500.png" alt="QualiPV 500">
+        <div class="certifications">
+          <div class="cert-line">
+            <img src="logo-rge.png" alt="RGE">
+            <img src="logo-qualipv500.png" alt="QualiPV 500">
+          </div>
+          <div class="cert-line">
+            <img src="logo-recharge-elec.png" alt="Recharge Elec+">
+          </div>
         </div>
-        <div class="certifications-bottom">
-          <img src="logo-recharge-elec.png" alt="Recharge Elec+">
-        </div>
-        <a href="https://www.qualit-enr.org/entreprises/echome-energies/" target="_blank">Voir le détail</a>
+        <a href="https://www.qualit-enr.org/entreprises/echome-energies/" target="_blank">Voir nos certifications</a>
       </div>
 
       <div class="footer-col">
@@ -110,13 +115,10 @@
           <li><a href="mentions-legales.html">Mentions légales</a></li>
           <li><a href="politique-confidentialite.html">Politique de confidentialité</a></li>
         </ul>
-      </div>
-
-      <div class="footer-col">
-        <h3>Suivez-nous</h3>
-        <div class="social-links">
-          <a href="https://www.instagram.com" target="_blank">📸 Instagram</a><br>
-          <a href="https://www.linkedin.com/company/echome-energies" target="_blank">💼 LinkedIn</a>
+        <div class="socials">
+          <a href="#" aria-label="Instagram">📸</a>
+          <a href="#" aria-label="LinkedIn">💼</a>
+          <a href="#" aria-label="Facebook">👍</a>
         </div>
       </div>
     </div>
@@ -126,15 +128,26 @@
     </div>
   </footer>
 
-  <!-- Script Slider -->
+  <!-- SCRIPT SLIDER -->
   <script>
     const slider = document.getElementById("puissance");
-    const output = document.getElementById("puissance-value");
-    output.textContent = slider.value + " kWc";
+    const bubble = document.getElementById("bubble");
 
-    slider.oninput = function() {
-      output.textContent = this.value + " kWc";
+    function setBubble(slider, bubble) {
+      const val = slider.value;
+      const min = slider.min ? slider.min : 0;
+      const max = slider.max ? slider.max : 100;
+      const newVal = ((val - min) * 100) / (max - min);
+
+      bubble.innerHTML = val + " kWc";
+      bubble.style.left = `calc(${newVal}% + (${8 - newVal * 0.15}px))`;
     }
+
+    slider.addEventListener("input", () => {
+      setBubble(slider, bubble);
+    });
+
+    setBubble(slider, bubble);
   </script>
 
 </body>
