--- a/index.html
+++ b/index.html
@@ -88,14 +88,20 @@
     <div class="container footer-grid">
       
       <div class="footer-col">
-        <h3>Echome Energies</h3>
-        <p>1159 Rue de la Galandrine<br>38210 Saint-Quentin-Sur-Isère</p>
-        <p>Tél : <a href="tel:0476373462">04 76 37 34 62</a></p>
-        <p>Email : <a href="mailto:contact@echome-energies.fr">contact@echome-energies.fr</a></p>
-      </div>
+  <h3>Nos certifications</h3>
+  <div class="certifications">
+    <div class="row">
+      <img src="logo-rge.png" alt="RGE">
+      <img src="logo-qualipv500.png" alt="QualiPV 500">
+    </div>
+    <div class="row">
+      <img src="logo-recharge-elec.png" alt="Recharge Elec+">
+    </div>
+  </div>
+  <a href="https://www.qualit-enr.org/entreprises/echome-energies/" target="_blank">
+  </a>
+</div>
 
-      <div class="footer-col">
-        <h3>Nos certifications</h3>
         <div class="certifications">
           <div class="cert-line">
             <img src="logo-rge.png" alt="RGE">
