--- a/index.html
+++ b/index.html
@@ -85,54 +85,50 @@
 
   <!-- FOOTER -->
   <footer class="footer">
-    <div class="container footer-grid">
-      
-      <div class="footer-col">
-  <h3>Nos certifications</h3>
-  <div class="certifications">
-    <div class="row">
-      <img src="logo-rge.png" alt="RGE">
-      <img src="logo-qualipv500.png" alt="QualiPV 500">
+  <div class="footer-grid">
+
+    <!-- Colonne Contact -->
+    <div class="footer-col">
+      <h3>Contact</h3>
+      <p>📍 1159 Rue de la Galandrine<br>38210 Saint-Quentin-sur-Isère</p>
+      <p>📞 <a href="tel:+33476373462">04 76 37 34 62</a></p>
+      <p>📧 <a href="mailto:contact@echome-energies.fr">contact@echome-energies.fr</a></p>
     </div>
-    <div class="row">
-      <img src="logo-recharge-elec.png" alt="Recharge Elec+">
+
+    <!-- Colonne Liens utiles -->
+    <div class="footer-col">
+      <h3>Liens utiles</h3>
+      <p><a href="#formulaire">Demander une étude gratuite</a></p>
+      <p><a href="/politique-confidentialite.html">Politique de confidentialité</a></p>
+      <p><a href="#">Mentions légales</a></p>
     </div>
+
+    <!-- Colonne Certifications -->
+    <div class="footer-col">
+      <h3>Certifications</h3>
+      <div class="certifications row">
+        <img src="rge-logo.png" alt="Certification RGE">
+        <img src="qualipv.png" alt="Certification QualiPV">
+      </div>
+    </div>
+
+    <!-- Colonne Réseaux sociaux -->
+    <div class="footer-col">
+      <h3>Suivez-nous</h3>
+      <div class="socials">
+        <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+        <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+        <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+      </div>
+    </div>
+
   </div>
-  <a href="https://www.qualit-enr.org/entreprises/echome-energies/" target="_blank">
-  </a>
-</div>
 
-        <div class="certifications">
-          <div class="cert-line">
-            <img src="logo-rge.png" alt="RGE">
-            <img src="logo-qualipv500.png" alt="QualiPV 500">
-          </div>
-          <div class="cert-line">
-            <img src="logo-recharge-elec.png" alt="Recharge Elec+">
-          </div>
-        </div>
-        <a href="https://www.qualit-enr.org/entreprises/echome-energies/" target="_blank">Voir nos certifications</a>
-      </div>
+  <div class="footer-bottom">
+    &copy; 2025 Echome Énergies – Tous droits réservés
+  </div>
+</footer>
 
-      <div class="footer-col">
-        <h3>Liens utiles</h3>
-        <ul>
-          <li><a href="cgv.html">Conditions Générales de Vente</a></li>
-          <li><a href="mentions-legales.html">Mentions légales</a></li>
-          <li><a href="politique-confidentialite.html">Politique de confidentialité</a></li>
-        </ul>
-        <div class="socials">
-          <a href="#" aria-label="Instagram">📸</a>
-          <a href="#" aria-label="LinkedIn">💼</a>
-          <a href="#" aria-label="Facebook">👍</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="footer-bottom">
-      <p>&copy; 2025 Echome Energies – Solutions photovoltaïques professionnelles</p>
-    </div>
-  </footer>
 
   <!-- SCRIPT SLIDER -->
   <script>
