--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <p>[CAPTCHA]</p>
         </div>
 
-        <button type="submit" class="cta">🚀 Envoyer ma demande</button>
+        <button type="submit" class="cta"> Envoyer ma demande</button>
       </form>
       <p class="confidentialite">🔒 Vos données resteront strictement confidentielles et ne seront jamais partagées.</p>
     </div>
