--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="hero-content">
         <h1>Un investissement durable, une rentabilité immédiate</h1>
         <p>Recevez votre étude gratuite et personnalisée.<br>Réponse garantie sous 48h par un expert Echome Energies.</p>
-        <a href="#formulaire" class="cta">🚀 Demander mon étude</a>
+        <a href="#formulaire" class="cta"> Demander mon étude</a>
       </div>
     </div>
   </header>
