--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <input type="tel" id="tel" name="tel" required>
 
         <!-- reCAPTCHA -->
-        <div class="g-recaptcha" data-sitekey="YOUR_SITE_KEY"></div>
+        <div class="g-recaptcha" data-sitekey="6Letqa0rAAAAAFXWiBwhwkZUEkcTfsZd802QdUtu"></div>
 
         <button type="submit" class="cta">Envoyer ma demande</button>
       </form>
