--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Echome Energies – Solutions photovoltaïques pour entreprises et collectivités</title>
-  <meta name="description" content="Études photovoltaïques gratuites pour entreprises et collectivités. Installation certifiée RGE & QualiPV, rentabilité immédiate et accompagnement expert.">
+  <meta name="description" content="Études photovoltaïques gratuites pour entreprises et collectivités. Installation certifiée RGE & QualiPV, accompagnement expert Echome Energies.">
   <meta name="keywords" content="photovoltaïque entreprise, solaire industriel, panneaux solaires collectivité, ombrières parking, toiture solaire, Echome Energies">
+
+  <!-- Open Graph pour LinkedIn Ads -->
+  <meta property="og:title" content="Echome Energies – Solutions photovoltaïques pour entreprises et collectivités">
+  <meta property="og:description" content="Études photovoltaïques gratuites pour entreprises et collectivités. Installation certifiée RGE & QualiPV, accompagnement expert Echome Energies.">
+  <meta property="og:image" content="https://www.echome-energies.fr/hero-social.jpg">
+  <meta property="og:url" content="https://www.echome-energies.fr/index.html">
+  <meta property="og:type" content="website">
+
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
@@ -100,7 +108,7 @@
         <input type="tel" id="tel" name="tel" required>
 
         <!-- reCAPTCHA -->
-        <div class="g-recaptcha" data-sitekey="6Letqa0rAAAAAFXWiBwhwkZUEkcTfsZd802QdUtu"></div>
+        <div class="g-recaptcha" data-sitekey="YOUR_SITE_KEY"></div>
 
         <button type="submit" class="cta">Envoyer ma demande</button>
       </form>
@@ -108,7 +116,7 @@
     </div>
   </section>
 
-  <!-- FAQ Accordéon -->
+  <!-- FAQ -->
   <section class="faq">
     <div class="container">
       <h2>Questions fréquentes</h2>
