--- a/index.html
+++ b/index.html
@@ -3,17 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Echome Energies – Solutions photovoltaïques pour entreprises et collectivités</title>
-  <meta name="description" content="Études photovoltaïques gratuites pour entreprises et collectivités. Installation certifiée RGE & QualiPV, accompagnement expert Echome Energies.">
-  <meta name="keywords" content="photovoltaïque entreprise, solaire industriel, panneaux solaires collectivité, ombrières parking, toiture solaire, Echome Energies">
-
-  <!-- Open Graph pour LinkedIn Ads -->
-  <meta property="og:title" content="Echome Energies – Solutions photovoltaïques pour entreprises et collectivités">
-  <meta property="og:description" content="Études photovoltaïques gratuites pour entreprises et collectivités. Installation certifiée RGE & QualiPV, accompagnement expert Echome Energies.">
-  <meta property="og:image" content="https://www.echome-energies.fr/hero-social.jpg">
-  <meta property="og:url" content="https://www.echome-energies.fr/index.html">
-  <meta property="og:type" content="website">
-
+  <title>Echome Energies – Solutions photovoltaïques pour professionnels</title>
+  <meta name="description" content="Echome Energies propose des solutions photovoltaïques pour entreprises et collectivités. Demandez votre étude gratuite et personnalisée.">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
@@ -23,11 +14,11 @@
   <!-- HERO -->
   <header class="hero">
     <div class="hero-overlay">
-      <img src="logo.png" alt="Echome Energies" class="logo" loading="lazy">
+      <img src="logo.png" alt="Echome Energies" class="logo">
       <div class="hero-content">
-        <h1>Un investissement durable,<br>une rentabilité immédiate</h1>
-        <p>Recevez votre <strong>étude gratuite et personnalisée</strong>.<br>Réponse garantie sous 48h par un expert Echome Energies.</p>
-        <a href="#formulaire" class="cta">Obtenir mon étude gratuite</a>
+        <h1>Un investissement durable, une rentabilité immédiate</h1>
+        <p>Recevez votre étude gratuite et personnalisée.<br>Réponse garantie sous 48h par un expert Echome Energies.</p>
+        <a href="#formulaire" class="cta">Demander mon étude</a>
       </div>
     </div>
   </header>
@@ -35,31 +26,28 @@
   <!-- INTRO -->
   <section class="intro">
     <div class="container">
-      <h2>Des solutions solaires pensées pour les professionnels</h2>
-      <p>Ombrières de parking, toitures industrielles, bâtiments tertiaires ou agricoles :  
-      <strong>Echome Energies</strong> vous accompagne de l’étude jusqu’à l’installation, avec un suivi flexible et certifié RGE.</p>
+      <h2>Des solutions solaires pensées pour les entreprises et collectivités</h2>
+      <p>Ombrières, toitures industrielles, bâtiments tertiaires… Nos experts vous accompagnent de l’étude jusqu’à l’installation, avec accompagnement adapté selon vos besoins.</p>
     </div>
   </section>
 
   <!-- REASSURANCE -->
   <section class="reassurance">
-    <div class="container">
-      <div class="reassurance-grid">
-        <div class="item">
-          <i class="fas fa-coins"></i>
-          <h3>Économies immédiates</h3>
-          <p>Réduisez vos factures grâce à l’autoconsommation et optimisez votre retour sur investissement.</p>
-        </div>
-        <div class="item">
-          <i class="fas fa-certificate"></i>
-          <h3>Installation certifiée</h3>
-          <p>Nos projets sont réalisés avec les certifications <strong>RGE</strong> et <strong>QualiPV</strong>.</p>
-        </div>
-        <div class="item">
-          <i class="fas fa-chart-line"></i>
-          <h3>Suivi sur mesure</h3>
-          <p>Choisissez le niveau de suivi qui correspond à votre projet : reporting, maintenance ou optimisation de production.</p>
-        </div>
+    <div class="reassurance-grid">
+      <div class="item">
+        <i class="fas fa-handshake"></i>
+        <h3>Accompagnement personnalisé</h3>
+        <p>Un expert Echome Energies vous guide étape par étape selon vos besoins.</p>
+      </div>
+      <div class="item">
+        <i class="fas fa-check-circle"></i>
+        <h3>Projets sur mesure</h3>
+        <p>Solutions adaptées à votre type de bâtiment et consommation énergétique.</p>
+      </div>
+      <div class="item">
+        <i class="fas fa-tachometer-alt"></i>
+        <h3>Suivi optionnel</h3>
+        <p>Suivi et reporting disponibles sur demande pour un contrôle optimal de votre installation.</p>
       </div>
     </div>
   </section>
@@ -68,7 +56,7 @@
   <section id="formulaire" class="form-section">
     <div class="container">
       <h2>Obtenez votre étude gratuite</h2>
-      <form action="https://formspree.io/f/your-id" method="POST">
+      <form id="contact-form" action="https://formspree.io/f/your-id" method="POST">
 
         <label for="structure"><i class="fas fa-building"></i> Type de structure</label>
         <select name="structure" id="structure" required>
@@ -112,84 +100,72 @@
 
         <button type="submit" class="cta">Envoyer ma demande</button>
       </form>
+
+      <!-- MESSAGE MERCI INLINE -->
+      <p id="form-success" style="display:none; text-align:center; color:#28a745; margin-top:15px; font-weight:bold;">
+        ✅ Merci ! Votre demande a bien été envoyée. Un expert Echome Energies vous contactera sous 48h.
+      </p>
+
       <p class="confidentialite">🔒 Vos données resteront strictement confidentielles et ne seront jamais partagées.</p>
     </div>
   </section>
 
   <!-- FAQ -->
   <section class="faq">
-    <div class="container">
-      <h2>Questions fréquentes</h2>
-
-      <div class="faq-item">
-        <button class="faq-question">Quel est le délai moyen d'installation ?</button>
-        <div class="faq-answer">
-          <p>En moyenne, entre 2 et 4 mois après validation de l'étude et des démarches administratives.</p>
-        </div>
+    <h2>Questions fréquentes</h2>
+    <div class="faq-item">
+      <button class="faq-question">Proposez-vous un suivi après installation ?</button>
+      <div class="faq-answer">
+        <p>Le suivi peut être mis en place selon votre demande et votre type de projet, incluant reporting et maintenance optionnelle.</p>
       </div>
-
-      <div class="faq-item">
-        <button class="faq-question">Quels types de bâtiments peuvent accueillir du solaire ?</button>
-        <div class="faq-answer">
-          <p>Toitures industrielles, agricoles, tertiaires et parkings avec ombrières sont idéaux. Echome Energies réalise une étude personnalisée pour votre projet.</p>
-        </div>
+    </div>
+    <div class="faq-item">
+      <button class="faq-question">Quels types de bâtiments sont adaptés ?</button>
+      <div class="faq-answer">
+        <p>Industriels, tertiaires, agricoles, collectivités… Echome Energies propose des solutions sur mesure.</p>
       </div>
-
-      <div class="faq-item">
-        <button class="faq-question">Proposez-vous un suivi après installation ?</button>
-        <div class="faq-answer">
-          <p>Echome Energies propose des solutions de suivi personnalisées selon vos besoins : reporting de performance, maintenance ou optimisation de production.</p>
-        </div>
-      </div>
-
     </div>
   </section>
 
   <!-- FOOTER -->
   <footer class="footer">
     <div class="footer-grid">
-
       <div class="footer-col">
-        <h3>Echome Energies</h3>
+        <h3>Contact</h3>
         <p>📍 1159 Rue de la Galandrine<br>38210 Saint-Quentin-sur-Isère</p>
         <p>📞 <a href="tel:+33476373462">04 76 37 34 62</a></p>
         <p>📧 <a href="mailto:contact@echome-energies.fr">contact@echome-energies.fr</a></p>
       </div>
-
       <div class="footer-col">
         <h3>Liens utiles</h3>
         <p><a href="#formulaire">Demander une étude gratuite</a></p>
-        <p><a href="politique-confidentialite.html">Politique de confidentialité</a></p>
+        <p><a href="politique_confidentialite.html">Politique de confidentialité</a></p>
         <p><a href="mentions-legales.html">Mentions légales</a></p>
         <p><a href="cgv.html">CGV</a></p>
       </div>
-
       <div class="footer-col">
         <h3>Certifications</h3>
         <div class="certifications row">
-          <img src="logo-qualipv500.png" alt="Certification QualiPV" loading="lazy">
-          <img src="logo-rge.png" alt="Certification RGE" loading="lazy">
-          <img src="logo-recharge-elec.png" alt="Certification Recharge Elec" loading="lazy">
+          <img src="logo-qualipv500.png" alt="Certification QualiPV">
+          <img src="logo-rge.png" alt="Certification RGE">
+          <img src="logo-recharge-elec.png" alt="Certification Recharge Électrique">
         </div>
       </div>
-
       <div class="footer-col">
         <h3>Suivez-nous</h3>
         <div class="socials">
-          <a href="https://www.instagram.com/echomenergies?igsh=YnMxNnM3ZXJkNTV4" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-          <a href="https://www.facebook.com/profile.php?id=61563413785578" target="_blank" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-          <a href="https://linkedin.com/in/echome-energies38210" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=61563413785578" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+          <a href="https://www.linkedin.com/in/echome-energies38210" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+          <a href="https://www.instagram.com/echomenergies?igsh=YnMxNnM3ZXJkNTV4" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
         </div>
       </div>
-
     </div>
-
     <div class="footer-bottom">
       &copy; 2025 Echome Energies – Tous droits réservés
     </div>
   </footer>
 
-  <!-- SCRIPT SLIDER + FAQ + MICRO-ANIMATIONS -->
+  <!-- SCRIPT FORMULAIRE AJAX, SLIDER ET FAQ -->
   <script>
     // SLIDER
     const slider = document.getElementById("puissance");
@@ -205,25 +181,40 @@
     slider.addEventListener("input", () => setBubble(slider, bubble));
     setBubble(slider, bubble);
 
-    // FAQ ACCORDÉON
-    const faqItems = document.querySelectorAll('.faq-item');
-    faqItems.forEach(item => {
-      const btn = item.querySelector('.faq-question');
-      btn.addEventListener('click', () => { item.classList.toggle('active'); });
+    // AJAX Formspree
+    const form = document.getElementById('contact-form');
+    form.addEventListener('submit', function(e) {
+      e.preventDefault();
+      if (grecaptcha.getResponse() === "") {
+        alert("Veuillez valider le reCAPTCHA avant d'envoyer le formulaire.");
+        return;
+      }
+      const data = new FormData(form);
+      fetch(form.action, {
+        method: 'POST',
+        body: data,
+        headers: {'Accept': 'application/json'}
+      })
+      .then(response => {
+        if(response.ok){
+          document.getElementById('form-success').style.display = 'block';
+          form.reset();
+          grecaptcha.reset();
+        } else {
+          alert('Oups ! Une erreur est survenue, réessayez plus tard.');
+        }
+      })
+      .catch(error => {
+        alert('Oups ! Une erreur est survenue, réessayez plus tard.');
+      });
     });
 
-    // MICRO-ANIMATIONS AU SCROLL
-    const animatedElements = document.querySelectorAll('.hero, .intro, .reassurance, .form-section, .faq, .footer');
-    const observerOptions = { threshold: 0.15 };
-    const observer = new IntersectionObserver((entries, observer) => {
-      entries.forEach(entry => {
-        if(entry.isIntersecting){
-          entry.target.classList.add('animate');
-          observer.unobserve(entry.target);
-        }
+    // FAQ
+    document.querySelectorAll('.faq-question').forEach(q => {
+      q.addEventListener('click', () => {
+        q.parentElement.classList.toggle('active');
       });
-    }, observerOptions);
-    animatedElements.forEach(el => observer.observe(el));
+    });
   </script>
 
 </body>
