--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <h2>Obtenez votre étude gratuite</h2>
       <form id="contact-form" action="https://formspree.io/f/your-id" method="POST">
 
-        <label for="structure"><i class="fas fa-building"></i> Type de structure</label>
+        <label for="structure">Type de structure</label>
         <select name="structure" id="structure" required>
           <option value="">-- Sélectionnez --</option>
           <option value="entreprise">Entreprise</option>
@@ -68,7 +68,7 @@
           <option value="autre">Autre</option>
         </select>
 
-        <label for="batiment"><i class="fas fa-warehouse"></i> Type de bâtiment</label>
+        <label for="batiment">Type de bâtiment</label>
         <select name="batiment" id="batiment" required>
           <option value="">-- Sélectionnez --</option>
           <option value="industriel">Industriel</option>
@@ -77,31 +77,30 @@
           <option value="autre">Autre</option>
         </select>
 
-        <label for="localisation"><i class="fas fa-map-marker-alt"></i> Localisation du projet</label>
+        <label for="localisation">Localisation du projet</label>
         <input type="text" id="localisation" name="localisation" placeholder="Ville / Code postal" required>
 
-        <label for="puissance"><i class="fas fa-solar-panel"></i> Puissance souhaitée (kWc)</label>
+        <label for="puissance">Puissance souhaitée (kWc)</label>
         <div class="slider-container">
           <input type="range" id="puissance" name="puissance" min="10" max="500" step="10" value="50">
           <div id="bubble">50 kWc</div>
         </div>
 
-        <label for="message"><i class="fas fa-pen"></i> Précisions complémentaires</label>
+        <label for="message">Précisions complémentaires</label>
         <textarea id="message" name="message" rows="4" placeholder="Expliquez votre projet..."></textarea>
 
-        <label for="email"><i class="fas fa-envelope"></i> Votre email professionnel</label>
+        <label for="email">Votre email professionnel</label>
         <input type="email" id="email" name="email" required>
 
-        <label for="tel"><i class="fas fa-phone"></i> Téléphone</label>
+        <label for="tel">Téléphone</label>
         <input type="tel" id="tel" name="tel" required>
 
         <!-- reCAPTCHA -->
-        <div class="g-recaptcha" data-sitekey="6Letqa0rAAAAAFXWiBwhwkZUEkcTfsZd802QdUtu"></div>
+        <div class="g-recaptcha" data-sitekey="VOTRE_NOUVELLE_CLE_SITE"></div>
 
         <button type="submit" class="cta">Envoyer ma demande</button>
       </form>
 
-      <!-- MESSAGE MERCI INLINE -->
       <p id="form-success" style="display:none; text-align:center; color:#28a745; margin-top:15px; font-weight:bold;">
         ✅ Merci ! Votre demande a bien été envoyée. Un expert Echome Energies vous contactera sous 48h.
       </p>
@@ -148,7 +147,7 @@
     </div>
   </footer>
 
-  <!-- SCRIPT FORMULAIRE AJAX, SLIDER -->
+  <!-- SCRIPT JS -->
   <script>
     // SLIDER
     const slider = document.getElementById("puissance");
@@ -164,7 +163,7 @@
     slider.addEventListener("input", () => setBubble(slider, bubble));
     setBubble(slider, bubble);
 
-    // AJAX Formspree
+    // AJAX Formspree + reCAPTCHA
     const form = document.getElementById('contact-form');
     form.addEventListener('submit', function(e) {
       e.preventDefault();
@@ -180,16 +179,14 @@
       })
       .then(response => {
         if(response.ok){
-          document.getElementById('form-success').style.display = 'block';
+          document.getElementById('form-success').style.display='block';
           form.reset();
           grecaptcha.reset();
         } else {
           alert('Oups ! Une erreur est survenue, réessayez plus tard.');
         }
       })
-      .catch(error => {
-        alert('Oups ! Une erreur est survenue, réessayez plus tard.');
-      });
+      .catch(error => alert('Oups ! Une erreur est survenue, réessayez plus tard.'));
     });
   </script>
 
