--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <input type="tel" id="tel" name="tel" required>
 
         <!-- reCAPTCHA -->
-        <div class="g-recaptcha" data-sitekey="VOTRE_NOUVELLE_CLE_SITE"></div>
+        <div class="g-recaptcha" data-sitekey="6Letqa0rAAAAAFXWiBwhwkZUEkcTfsZd802QdUtu"></div>
 
         <button type="submit" class="cta">Envoyer ma demande</button>
       </form>
