--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
     <div class="footer-grid">
       <div class="footer-col">
         <h3>Contact</h3>
+        <p>Echome Energies</p>
         <p>📍 1159 Rue de la Galandrine<br>38210 Saint-Quentin-sur-Isère</p>
         <p>📞 <a href="tel:+33476373462">04 76 37 34 62</a></p>
         <p>📧 <a href="mailto:contact@echome-energies.fr">contact@echome-energies.fr</a></p>
